--- a/Game Theory/.gitignore
+++ b/Game Theory/.gitignore
@@ -1,1 +1,1 @@
-.A course in game theory (Osborne, Martin J.Rubinstein, Ariel) (Z-Library).pdf
+A course in game theory (Osborne, Martin J.Rubinstein, Ariel) (Z-Library).pdf
